--- a/assets/scss/_portfolio-pages.scss
+++ b/assets/scss/_portfolio-pages.scss
@@ -438,7 +438,7 @@
 			}
 		}
 		img#detailpanem-hero {
-			width:100%;
+			max-width:100%;
 		}
 		ul.goals-list {
 			@media screen and (min-width:992px) {
